# flytest

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.local.yml  docker-compose.yml  package-lock.json  package.json  run_compose.sh
FlyTest_Actuator/: README.md  actuator.spec  browser_installer.py  build_exe.py  config.example.toml  config.toml  consumer.py  data_processor.py  executor.py  main.py  models.py  pyproject.toml  requirements.txt  test_actuator.py  test_connection.py  test_data_processor.py  test_e2e.py  websocket_client.py
FlyTest_Actuator/gui/: __init__.py  login_window.py
FlyTest_FastAPI/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
FlyTest_FastAPI/alembic/: README.md  env.py
FlyTest_FastAPI/app/: __init__.py  config.py  lifespan.py  logging.py  main.py
FlyTest_FastAPI/app/adapters/: __init__.py
FlyTest_FastAPI/app/api/: health.py  router.py
FlyTest_FastAPI/app/compat/: __init__.py  api_automation_runtime.py  django_bridge.py  django_http.py  knowledge_runtime.py  langgraph_runtime.py  orchestrator_runtime.py  requirements_runtime.py  testcases_runtime.py  ui_automation_runtime.py
FlyTest_FastAPI/app/core/: __init__.py  auth.py  context.py  dependencies.py  errors.py  pagination.py  permissions.py  responses.py  security.py
FlyTest_FastAPI/app/db/: __init__.py  metadata.py  session.py
FlyTest_FastAPI/app/repositories/: api_keys.py  auth.py  knowledge.py  (+6 more)
FlyTest_FastAPI/scripts/: compat_runtime_audit.py  django_runtime_audit.py  proxy_audit.py  route_audit.py
FlyTest_FastAPI/tests/: __init__.py
(+927 files in other folders)
