[project]
name = "flytest-actuator"
version = "0.1.0"
description = "UI自动化执行器服务"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.0",
    "httpx>=0.25.0",
    "tomli>=2.0",
    "tomli_w>=1.0",
    "playwright>=1.40.0",
    "pyside6>=6.10.1",
    "pyinstaller>=6.18.0",
    "websocket-client>=1.9.0",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6.0"]
build = ["pyinstaller>=6.0.0"]

[project.scripts]
actuator = "main:main"

