[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "flytest-fastapi"
version = "0.1.0"
description = "Parallel FastAPI backend scaffold for FlyTest migration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "Django>=5.2,<6.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.14,<2.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-jose[cryptography]>=3.3,<4.0",
  "passlib[bcrypt]>=1.7,<2.0",
  "psycopg[binary]>=3.2,<4.0",
  "httpx>=0.28,<1.0",
  "redis>=5.0,<6.0",
  "celery>=5.4,<6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
